Fixed bug #23792 (8 bit graphics don't rotate properly) Patch by: pajoye@php.net

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@136239 c90b9560-bf6c-de11-be94-00142212c4b1